# rk2

./: .gitmodules  CMakeLists.txt  CPack.cmake
.github/workflows/: CI.yml  CPack.yml  build.yml
Facade/: FacadePatternExample.h
Facade/Resources/: Readme.md
_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Facade-0.1.1-Linux.tar.Z  Makefile  check  cmake_install.cmake  install_manifest.txt  my_exe
_build/_CPack_Packages/Linux/STGZ/: Facade-0.1.1-Linux.sh
tests/: test.cpp
